# denora

./: .BANNER  .cproject  .gitignore  .gitmodules  .project  Changes  Changes.1.5.pre2013  Changes.conf  Changes.lang  Changes.old  Changes.sql  Config  Config.bat  Makefile.in  Makefile.inc.win32  Makefile.win32  QUICKSTART.txt  README  TODO.txt  aclocal.m4  ccdv.c  config.guess  config.sub  configure  configure.in  install-script  install.js  install.vbs  libtool  mysql.m4  version.in  version.log.old
.github/workflows/: shiftleft.yml
autoconf/: configure.in  install-script
autoconf/m4/: ax_lib_postgresql.m4  ccdv.m4  denora.m4  ext_have_lib.m4  libevent.m4  libgnutls.m4  perl.m4  python.m4
contrib/: README  SQL_QUERIES  optimzietable.php
contrib/chanstats/: channels.php  chanstats.php  common.php  mysql.ini.php
contrib/deprecated_protocols/: README  asuka.c  asuka.h  beware.c  beware.h  dreamforge.c  dreamforge.h  fqircd.c  fqircd.h  hybrid.c  hybrid.h  hyperion.c  hyperion.h  inspircd.c  inspircd.h  ircdreams.c  ircdreams.h  ircdrizon.h  liquidircd.c  liquidircd.h  musircd.c  musircd.h  nefarious.c  nefarious.h  neoircd.c  neoircd.h  ngircd.c  ngircd.h  plexus.c  plexus.h  plexus3.c  plexus3.h  ptlink.c  ptlink.h  quakeircd.c  quakeircd.h  rageircd.c  rageircd.h  ratbox.c  ratbox2.xml  (+14 more)
contrib/glines/: glines.php
contrib/pie_chart/: common.php  index.html  mysql.ini.php  piegraph.class.php  tld_chan.php  tld_overall.php  version_chan.php  version_network.php
contrib/tools/: README  smconv.pl
contrib/web-api/: README.txt  denora.cfg.php  denora.php  index.php  sql.php
contrib/whois/: dowhois.php  index.html
contrib/xmlrpc/: xmlrpc_example.php
data/: example.chk  example.conf  example.de.conf  example.es.conf  example.it.conf  example.ru.conf  example.xml  index.tpl  ircu.conf  nefarious2.conf  stats.motd
data/ircdconfig/: bahamut.xml  charybdis.xml  hybrid7.xml  inspircd11.xml  inspircd12.xml  ircu.xml  nefarious13.xml  nefarious2.xml  ratbox2.xml  ratbox3.xml  scarynet.xml  shadowircd.xml  unreal32.xml
denoralib/: Denora_Mem.c  Denora_SQL.c  denoralib.c  denoralib.h  denoralib_err.h  xmlparse.c
docs/: COMMANDS  COPYING  CRON  Changes.conf  Changes.lang  Changes.old  Changes.sql  Donation  EVENTS  FAQ  INSTALL  IRCD  MODCONFIG  MODULES  MYSQL  QUICKSTART.txt  README  TODO.txt  WIN32.txt  XMLRPC  XMLRPC_MOD  denora.html  osbuild.html
docs/HTML/: center.html  index.html  left.html
docs/html_docs/: commands.html  credits.html  cron.html  donation.html  errors.html  events.html  faq.html  gnulicense.html  install.html  ircd.html  left.html  main.html  modconfig.html  modules.html  mysql.html  osbuild.html  windows.html  xmlrpc.html  xmlrpcmod.html
docs/plain text/: CREDITS
docs/text/: COMMANDS  CREDITS.txt  MODCONFIG  MYSQL
include/: GeoIP.h  GeoIPCity.h  GeoIP_internal.h  Makefile  Makefile.win32  adns.h  confparse.h  cron.h  defines.h  denora.h  denoralib.h  events.h  extern.h  ircd.h  list-array.h  list.h  makefile.win32  modes.h  modules.h  resource.h  sglib.h  sockets.h  sql.h  sqlite3.h  sysconf.h.in  sysconf.h.win32  threads.h  version.js  version.sh  version.sh.c  xmlrpc.h  zip.h
include/os/: aix.h  bsd.h  cygwin.h  linux.h  minix.h  sun.h  win32.h  win32vs2005.h
lang/: Makefile  Makefile.win32  de.l  en_us.l  es.l  fr.l  it.l  langcomp.c  langtool.c  nl.l  pt_br.l  ru.l
lib/execinfo/: Makefile.in  README  configure  execinfo.c
lib/geoip/: GeoIP.c  GeoIP.h  GeoIPCity.c  GeoIP_internal.h  Makefile.in
lib/libdenora/: Makefile.in
lib/sqlite3/: Makefile.in
libs/denoralib/: DateTime.c  Denora_Mem.c  Denora_SQL.c  FileIO.c  GeoIP.c  Makefile  Makefile.win32  String.c  base64.c  denoralib.c  denoralib.h  markup.c  match.c  md5.c  xmlconfig.c  xmlparse.c  xmlparse.h  zip.c  zip.h
libs/libGeoIP/: Makefile
m4/: libxml2.m4  mysql.m4
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
sql/: admin.sql  asuka.sql  bahamut.sql  beware.sql  charybdis.sql  ctcp.sql  denora.sql  dreamforge.sql  fqircd.sql  hybrid.sql  hyperion.sql  inspircd.sql  inspircd11.sql  inspircd12.sql  ircdreams.sql  ircu.sql  liquidircd.sql  musircd.sql  nefarious.sql  nefarious13.sql  nefarious2.sql  neoircd.sql  ngircd.sql  plexus.sql  plexus3.sql  ptlink.sql  quakeircd.sql  rageircd.sql  ratbox.sql  scarynet.sql  shadowircd.sql  solidircd.sql  sorcery.sql  syntaxIRCd.sql  ultimate2.sql  ultimate3.sql  unreal31.sql  unreal32.sql  update.sql  viagra.sql
sql/mysql/: charybdis.sql  denora.sql  hybrid.sql  inspircd12.sql  ircdrizon.sql  nefarious2.sql  shadowircd.sql  unreal32.sql
src/: ChanBanMode.c  ChanMode.c  Denora_Mem.c  Denora_SQL.c  FileIO.c  GeoIP.c  GeoIPCity.c  GeoIP_deprecated.c  MainTimer.c  Makefile  Makefile.win32  Modes.c  NetworkBansModules.c  admin.c  adns.c  bans.c  base64.c  channels.c  chanstats.c  config.c  core.c  cron.c  ctcp.c  datafiles.c  db.c  denoralib.c  encmod.c  events.c  exclude.c  extsock.c  ircd.c  language.c  list.c  log.c  main.c  markup.c  md5.c  messages.c  mod_version.c  moddata.c  (+34 more)
src/core/: Makefile  Makefile.sub  Makefile.win32  configure  cron_chanstats.c  cron_daily.c  event_229.c  event_242.c  event_351.c  event_eob.c  event_motd.c  event_uline.c  gline.c  html_ctcp.c  html_daily.c  html_map.c  html_misc.c  html_netstat.c  html_servdtl.c  html_server.c  html_tld.c  html_top10chan.c  html_top10kicks.c  html_top10topics.c  html_topchan.c  msg_null.c  p10.c  sgline.c  spamfilter.c  sqline.c  ss_admin.c  ss_chanstats.c  ss_core.c  ss_envinfo.c  ss_exclude.c  ss_export.c  ss_fantasy_gstats.c  ss_fantasy_gtop.c  ss_fantasy_gtop10.c  ss_fantasy_help.c  (+16 more)
src/encmod/: configure  enc_none.c  libcrypt.c  makefile.win32  md5.c  md5.h
src/modules/: Makefile  Makefile.sub  configure  example.c  ircd_hline.README  ircd_hline.c  ircd_oper.README  ircd_oper.c  ircd_ports.README  ircd_ports.c  lastspoke.README  lastspoke.c  log_ctcpversion.README  log_ctcpversion.c  log_ctcpversion.conf  makefile.inc.win32  makefile.sub.win32  makefile.win32  seen.README  (+9 more)
(+135 files in other folders)
